# ucp

./: .gitignore  BUILD.md  Justfile  build_log.txt  issue.txt  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
dev/: ui.md
gnome-extension/: extension.js  metadata.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/flatpak/: cargo-sources.json  com.keithvassallo.clustercut.desktop  com.keithvassallo.clustercut.flathub.yml  com.keithvassallo.clustercut.yml  node-sources.json
src-tauri/src/: clipboard.rs  crypto.rs  discovery.rs  lib.rs  main.rs  peer.rs  protocol.rs  state.rs  storage.rs  transport.rs  tray.rs
src/components/: ShortcutRecorder.tsx
