[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.17.1"
quinn = "0.11.9"
spake2 = "0.4.0"
chacha20poly1305 = "0.10.1"
arboard = "3.6.1"
rand = "0.9.2"
getrandom = "0.3.4"
base64 = "0.22.1"
tokio = { version = "1.49.0", features = ["full"] }
local-ip-address = "0.6.8"
rcgen = "0.14.6"
rustls = { version = "0.23.35", features = ["aws_lc_rs"] }
once_cell = "1.19"
names = "0.14.0"

