[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.17.1"
quinn = "0.11.9"
spake2 = "0.4.0"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
getrandom = "0.2.14"
base64 = "0.22.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
local-ip-address = "0.6.8"
rcgen = "0.14.6"
rustls = { version = "0.23.35", features = ["aws_lc_rs"] }
once_cell = "1.19"
names = "0.14.0"
hostname = "0.4"
ipnetwork = "0.21.1"
futures = "0.3.31"
tauri-plugin-notification = "2.3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "serde"] }
tauri-plugin-clipboard = "2"
tauri-plugin-global-shortcut = "2.3.1"
url = "2.5"
percent-encoding = "2.3"
notify-rust = "4"

[profile.dev.package."*"]
opt-level = 3

